<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">rectangler</string>
    <string name="upjs" translatable="false">UPJS</string>
    <string name="spse" translatable="false">SPSE</string>
    <string name="play_button">Hraj</string>
    <string name="options_button">Nastavenia</string>
    <string name="credits_button">Poďakovanie</string>
    <string name="quit_button">Koniec</string>
    <string name="volume">Zvuk</string>
    <string name="save">Ulož</string>
    <string name="language">Jazyk</string>
    <string name="english">Angličtina</string>
    <string name="slovak">Slovenčina</string>
    <string name="saved_text">Nastavenia boli uložene</string>
    <string name="loading_text">10. ročník súťaže IHRA</string>
    <string name="game_over">Koniec hry!</string>
    <string name="main_menu">Hlavne menu</string>
    <string name="score">Skóre: </string>
</resources>